# GraphicsPlayground-Mac

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  README.md  ~$本科毕业论文.docx
GraphicsPlayground-Mac/: ExampleBase.cpp  ExampleBase.hpp  Game.cpp  Game.hpp  GraphicsPlayground.sln  GraphicsPlayground.vcxproj  GraphicsPlayground.vcxproj.filters  InterpolationExample.h  KeyboardInputHandler.hpp  MouseInputHandler.hpp  Quad.cpp  Quad.hpp  ReadMe.txt  Renderable.hpp  RotateCubeExample.cpp  RotateTextureCubeExample.h  WaterQuad.cpp  WaterQuad.hpp  main.cpp  stdafx.cpp  stdafx.h
GraphicsPlayground-Mac.xcodeproj/: project.pbxproj
GraphicsPlayground-Mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GraphicsPlayground-Mac.xcodeproj/project.xcworkspace/xcuserdata/kli.xcuserdatad/: UserInterfaceState.xcuserstate
GraphicsPlayground-Mac.xcodeproj/project.xcworkspace/xcuserdata/kli.xcuserdatad/xcdebugger/: Expressions.xcexplist
GraphicsPlayground-Mac.xcodeproj/xcuserdata/kli.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
GraphicsPlayground-Mac.xcodeproj/xcuserdata/kli.xcuserdatad/xcschemes/: GraphicsPlayground-Mac.xcscheme  xcschememanagement.plist
GraphicsPlayground-Mac/BlendExample/: BlendExample.cpp  BlendExample.h
GraphicsPlayground-Mac/CausticExample/: CausticExample.cpp  CausticExample.h  CausticPanel.cpp  CausticPanel.h
GraphicsPlayground-Mac/CityModel/: Camera.cpp  Camera.h  CityModelExample.cpp  CityModelExample.h  CityModeller.cpp  CityModeller.h  DirectionalLight.h  DirectionalLightcpp.cpp  FormatTranslator.h  Frustum.cpp  Frustum.h  Light.h  Node.cpp  Node.h  Sphere.cpp  Sphere.h  SurfaceMaterial.h  collidetest.cpp  collidetest.h  example4.cpp  struct.h
GraphicsPlayground-Mac/CityModelExample/: AABBCollider.cpp  AABBCollider.h  Camera.cpp  Camera.h  CityModelExample.cpp  CityModelExample.h  CityModeller.cpp  CityModeller.h  Collider.cpp  Collider.h  CollisionDetector.cpp  CollisionDetector.h  CollisionHelper.h  CollisionPackage.h  Cube.h  CubemapTexture.cpp  CubemapTexture.h  DirectionalLight.h  DirectionalLightcpp.cpp  FormatTranslator.cpp  FormatTranslator.h  Frustum.cpp  Frustum.h  Helper.h  Light.h  Node.cpp  Node.h  Plane.h  Ray.h  SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h  SphereCollider.cpp  SphereCollider.h  SurfaceMaterial.h  Triangle.h  collidetest.cpp  stdafx.h  struct.h
GraphicsPlayground-Mac/Geometry/: Cube.h  DynamicEnvMappedSphere.cpp  DynamicEnvMappedSphere.hpp  EnvMappedSphere.cpp  EnvMappedSphere.hpp  EnvMappedTransparentSphere.cpp  EnvMappedTransparentSphere.hpp  GeometryExample.cpp  GeometryExample.hpp  Ray.cpp  RenderableSphere.cpp  RenderableSphere.h  SingleColorSphere.cpp  SingleColorSphere.h  Sphere.h  TexturedSphere.cpp  TexturedSphere.hpp
GraphicsPlayground-Mac/Interpolation/: InterpolationExample.cpp  InterpolationExample.h
GraphicsPlayground-Mac/Particle System/: AddVelAffector.cpp  Affector.h  ColorAffector.h  ColorBlendingAffector.cpp  Emitter.h  FadeAffector.cpp  ParticleStruct.h  ParticleSystemExample.cpp  ScaleAffector.h
GraphicsPlayground-Mac/ParticleSystem/: AddVelAffector.h  ColorAffector.cpp  ColorBlendingAffector.h  Effect.cpp  Effect.h  Emitter.cpp  Emitter.h  FadeAffector.h  HelperFunction.cpp  HelperFunction.h  ParticleSystemExample.h  ScaleAffector.cpp
GraphicsPlayground-Mac/RotateCube/: RotateCubeExample.cpp  RotateCubeExample.h
GraphicsPlayground-Mac/RotateTextureCube/: RotateTextureCubeExample.cpp  RotateTextureCubeExample.h
GraphicsPlayground-Mac/WaterRendering/: WaterQuad.cpp  WaterQuad.hpp  WaterRenderingExample.cpp  WaterRenderingExample.hpp
GraphicsPlayground-Mac/common/: CubeMapRenderableTarget.cpp  CubeMapRenderableTarget.h  RenderTarget.cpp  RenderTarget.h  TexturedPanel.cpp  TexturedPanel.h
documents/: readme.txt
resource/XMLs/RainCloudEffect/: cloud.emitter.xml  rain&cloud_effect.xml  rain.emitter.xml
resource/XMLs/SmokeFireEffect/: fire.emitter.xml  smoke&fire_effect.xml  smoke.emitter.xml
resource/picture/citymodel/skybox/: skybox_texture_negX.tga  skybox_texture_negY.tga  skybox_texture_negZ.tga  skybox_texture_posX.tga  skybox_texture_posY.tga  skybox_texture_posZ.tga
resource/picture/common/: alphatest.tga  brick.dds  brick.tga  metal.dds  metal.tga
resource/picture/particle/: fire.tga  raindrop.tga  raindrop2.tga  smoke.tga  smoke2.tga  smoke3.tga  smoketex.tga
shaders/: Blend.fsh  Blend.vsh  RotateCube.fsh  RotateCube.vsh  RotateTextureCube.fsh  RotateTextureCube.vsh  city_model.fsh  city_model.vsh  interpolation.fsh  interpolation.vsh  skybox.fsh  skybox.vsh
shaders/Geometry/: EnvMappedSphere.fsh  EnvMappedTransparentSphere.fsh  EnvMappedTransparentSphere.vsh  SingleColorSphere.fsh  SingleColorSphere.vsh  TexturedSphere.fsh  TexturedSphere.vsh
shaders/causticPanel/: CausticPanel.fsh  CausticPanel.vsh
shaders/particle/: particle.fsh  particle.vsh
shaders/texturedPanel/: TexturedPanel.vsh
shaders/water/: water.fsh  water.vsh
wolf/: W_Buffer.cpp  W_Buffer.h  W_BufferManager.cpp  W_BufferManager.h  W_Common.cpp  W_Common.h  W_IndexBuffer.cpp  W_IndexBuffer.h  W_Material.cpp  W_Material.h  W_MaterialManager.cpp  W_MaterialManager.h  W_Model.cpp  W_Model.h  W_Program.cpp  W_Program.h  W_ProgramManager.cpp  W_ProgramManager.h  W_Texture.cpp  W_Texture.h  W_TextureManager.cpp  W_TextureManager.h  W_Types.h  W_VertexBuffer.cpp  W_VertexBuffer.h  W_VertexDeclaration.cpp  W_VertexDeclaration.h
